<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">0BDII_WiFi_Collect</string>
    <string name="service_name">TcpClientService</string>
    <string name="action_startOBDII">Start OBDII requests</string>
    <string name="action_stopOBDII">Stop OBDII requests</string>
    <string name="action_startCAN">Start CAN monitoring</string>
    <string name="action_stopCAN">Stop CAN monitoring</string>
    <string name="action_save">Save to file</string>
    <string name="action_google">Make Route</string>
    <!--<string name="start_button">Start OBDII requests</string>-->

</resources>
