<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bitmaster.obdii_wifi_collect.obdwifi.MainActivity" >
    
    <item android:id="@+id/action_startObd"
        android:title="@string/action_startOBDII"
        android:orderInCategory="99"
        app:showAsAction="always" />
    <item android:id="@+id/action_stopObd"
        android:title="@string/action_stopOBDII"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_startCan"
        android:title="@string/action_startCAN"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_stopCan"
        android:title="@string/action_stopCAN"
        android:orderInCategory="102"
        app:showAsAction="always" />
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="103"
        app:showAsAction="always" />
</menu>
